
  * Improvement: speed and memory optimizations for the :has(subquery) selector.

  * Improvement: the :contains(text) and :containsOwn(text) selectors are now whitespace normalized, aligning to the
    document text that they are matching against.
    <https://github.com/jhy/jsoup/issues/876>

  * Bugfix: when tracking errors or checking for validity in the Cleaner, errors were incorrectly raised for missing
    optional closing tags.

  * Bugfix: the OSGi bundle meta-data incorrectly set a version on the import of javax.annotation (used as a build-time
    dependency for nullability assertions).
    <https://github.com/jhy/jsoup/issues/1616>

  * Bugfix: the Attributes::equals() method was sensitive to the order of its contents, but it should not be.
    <https://github.com/jhy/jsoup/issues/1492>

  * Bugfix: when the HTML parser was configured to preserve case, Element text methods would miss adding whitespace for
    "BR" tags.

  * Bugfix: attribute names are now normalized & validated correctly for the specific output syntax (HTML or XML).
    Previously, syntactically invalid attribute names could be output by the html() methods. Such attributes are still
    available in the DOM, and will be normalized if possible on output.
    <https://github.com/jhy/jsoup/issues/1474>

  * Build Improvement: fixed nullability annotations for Node.equals(other) and other equals methods.
    <https://github.com/jhy/jsoup/issues/1628>

*** Release 1.14.2 [2021-Aug-15]
  * Improvement: support Pattern.quote \Q and \E escapes in the selector regex matchers.
    <https://github.com/jhy/jsoup/pull/1536>

  * Improvement: Element.absUrl() now supports tel: URLs, and other URLs that are already absolute but that Java does
    not have input stream handlers for.
    <https://github.com/jhy/jsoup/issues/1610>

  * Bugfix: when serializing output, escape characters that are in the < 0x20 range. This improves XML output