@@ -520,13 +520,15 @@ public abstract class Node implements Cloneable {
                 }
             }
             if (sameList) { // moving, so OK to empty firstParent and short-circuit
+                boolean wasEmpty = childNodeSize() == 0;
                 firstParent.empty();
                 nodes.addAll(index, Arrays.asList(children));
                 i = children.length;
                 while (i-- > 0) {
                     children[i].parentNode = this;
                 }
-                reindexChildren(index);
+                if (!(wasEmpty && children[0].siblingIndex == 0)) // skip reindexing if we just moved
+                    reindexChildren(index);
                 return;
             }
         }
@@ -544,6 +546,7 @@ public abstract class Node implements Cloneable {
     }
 
     private void reindexChildren(int start) {
+        if (childNodeSize() == 0) return;
         final List<Node> childNodes = ensureChildNodes();
 
         for (int i = start; i < childNodes.size(); i++) {
